After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 66666 - Crash on Undo a delete (column with graph)
Crash on Undo a delete (column with graph)
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
git master
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
: 66841 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2001-12-10 22:59 UTC by Adrian Custer
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gnumeric file to show crash (5.99 KB, application/octet-stream)
2001-12-10 23:00 UTC, Adrian Custer
Details

Description Adrian Custer 2001-12-10 22:59:11 UTC
When I delete a column with a graph various weird behaviours occur. With
the attached file, a crash occurs with the backtrace below.


In a new gnumeric
0) new gnumeric
1) c3:5 gets 1,2,3
2) d3:5 gets 11,22,11
3) graph icon, scatter plot paste it starting in the middle of cell G3.
-> there is now a graph "anchored" in cell G3.
4) select column G, right click -> delete column
-> graph also disappears.
5) click undo
I get three (or four) boxes of the "group" and outline variety above the
ABCDE... column labels.


In the file RDWthreshold.gnumeric:
0) open file
-> should be open to sheet "Rogers and Rand., 1978"
1) select column H, right click-> delete column
-> right hand plot also disappears
2) undo
->crash. In gdb the bt is:
(gdb) bt
  • #0 ??
  • #1 workbook_expr_unrelocate
    at workbook.c line 647
  • #2 cmd_ins_del_colrow_undo
    at commands.c line 913
  • #3 command_undo
    at commands.c line 286
  • #4 cb_undo_combo
    at workbook-control-gui.c line 1614
  • #5 gtk_marshal_NONE
    from /usr/lib/libgtk-1.2.so.0
  • #6 ??

I'm gessing there's a stray pointer somewhere,

cheers,
adrian
Comment 1 Adrian Custer 2001-12-10 23:00:05 UTC
Created attachment 6201 [details]
gnumeric file to show crash
Comment 2 Andreas J. Guelzow 2001-12-13 02:05:37 UTC
*** Bug 66841 has been marked as a duplicate of this bug. ***
Comment 3 Jody Goldberg 2001-12-25 21:23:34 UTC
Fixed in CVS.
Comment 4 Bugzilla Maintainers 2004-04-01 23:44:57 UTC
The URL field has been removed from bugzilla.gnome.org. This URL was in the old URL field, and is being added as a comment so that the data is not lost. Please email bugmaster@gnome.org if you have any questions.

URL: 
http://nopause.berkeley.edu/~acuster/gnumeric/RDWthreshold.gnumeric