http://bugzilla.gnome.org/show_bug.cgi?id=66666 Part 1 init even if we are

2001-12-11  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=66666 Part 1
	* src/colrow.c (colrow_get_states) : init even if we are default
	  just in case something scans it later.

2001-12-10  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (fmt_dialog_selection_type) : Life is simpler.